Matrix printing out for debug