@@ -2,3 +2,7 @@
 This repository contains some classic math functions, implemented in Java. 
 These functions I need from time to time in my work, so I have decided to push them online, 
 as a personal cheat sheet.
+
+Compile it: `javac -d out --add-modules linear,test --module-source-path './src' $(find . -name "*.java")`
+
+Run it: `java -p out --module test/test.Test`
